[package]
name = "mooc-pdf-download"
version = "0.1.2"
edition = "2021"
license = "MIT"

[dependencies]
bytes = "1.11.0"
cookie = "0.18.1"
cookie_store = "0.22.0"
dialoguer = "0.12.0"
eyre = "0.6.12"
indexmap = { version = "2.12.1", features = ["serde"] }
indicatif = { version = "0.18.3", features = ["improved_unicode"] }
memchr = "2.7.6"
rand = "0.9.2"
regex = "1.12.2"
reqwest = { version = "0.12.26", features = ["cookies", "multipart"] }
rookie = "0.5.6"
tokio = { version = "1.48.0", features = ["fs", "macros", "rt-multi-thread"] }

[package.metadata.docs.rs]
rustdoc-args = ["--generate-link-to-definition"]

[profile.release]
panic = "abort"
lto = true
strip = true
codegen-units = 1
