[package]
name = "mooc-pdf-download"
version = "0.1.2"
edition = "2021"
license = "MIT"

[dependencies]
bytes = "1.11.1"
cookie = "0.18.1"
cookie_store = "0.22.0"
dialoguer = "0.12.0"
eyre = "0.6.12"
indexmap = { version = "2.13.0", features = ["serde"] }
indicatif = { version = "0.18.3", features = ["improved_unicode"] }
memchr = "2.7.6"
rand = "0.9.2"
regex = "1.12.3"
reqwest = { version = "0.13.1", features = ["cookies", "form"] }
rookie = "0.5.6"
tokio = { version = "1.49.0", features = ["fs", "macros", "rt-multi-thread"] }

[package.metadata.docs.rs]
rustdoc-args = ["--generate-link-to-definition"]

[profile.release]
panic = "abort"
lto = true
strip = true
codegen-units = 1
